--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Resume Tiokolkin</title>
 </head>
 <body>
-    <img src="img/photo1.jpg" alt="Владислав Тиоколкин" width="220">
+    <img src="photo1.jpg" alt="Владислав Тиоколкин" width="220">
     <h1><strong> Владислав Тиоколкин</strong></h1>
     <hr>
     <p></p>Я <strong>начинающий программист</strong>, нацеленный на <strong>результат</strong> и постоянное <strong>повышение квалицфикации</strong>.</p>
